# ChangeLog for sys-libs/cracklib
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/cracklib/ChangeLog,v 1.104 2006/12/11 03:40:48 vapier Exp $

  11 Dec 2006; Mike Frysinger <vapier@gentoo.org> cracklib-2.8.9-r1.ebuild:
  Pull in python when USE=python #157787.

  02 Oct 2006; Daniel Gryniewicz <dang@gentoo.org> cracklib-2.8.9-r1.ebuild:
  Marked stable on amd64 for bug #149051

  27 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org>
  cracklib-2.8.9-r1.ebuild:
  Stable on alpha as per bug #149051

  26 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  cracklib-2.8.9-r1.ebuild:
  Stable on sparc wrt #149051

  26 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  cracklib-2.8.9-r1.ebuild:
  Stable on hppa wrt #149051

  26 Sep 2006; Joshua Jackson <tsunam@gentoo.org> cracklib-2.8.9-r1.ebuild:
  Stable x86; bug #149051

  25 Sep 2006; <nixnut@gentoo.org> cracklib-2.8.9-r1.ebuild:
  Stable on ppc wrt bug 149051

  25 Sep 2006; Markus Rothe <corsair@gentoo.org> cracklib-2.8.9-r1.ebuild:
  Stable on ppc64; bug #149051

*cracklib-2.8.9-r1 (20 Aug 2006)

  20 Aug 2006; Mike Frysinger <vapier@gentoo.org>
  +files/cracklib-2.8.9-findpw.patch, +cracklib-2.8.9-r1.ebuild:
  Fix from upstream for header leakage #142765 by Ming Zhao.

  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> cracklib-2.8.9.ebuild:
  Marked stable on mips.

  28 Jun 2006; Luis Medinas <metalgod@gentoo.org> cracklib-2.8.9.ebuild:
  Stable on amd64. Bug #138146.

  27 Jun 2006; Thomas Cort <tcort@gentoo.org> cracklib-2.8.9.ebuild:
  Stable on alpha wrt Bug #138146.

  27 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> cracklib-2.8.9.ebuild:
  Stable on sparc wrt #138146

  27 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> cracklib-2.8.9.ebuild:
  Stable on x86 wrt bug #138146.

  27 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  cracklib-2.8.9.ebuild:
  ppc stable, #138146
