@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/cracklib/cracklib-2.8.9-r1.ebuild,v 1.11 2006/12/11 03:40:48 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/cracklib/cracklib-2.8.9-r1.ebuild,v 1.12 2006/12/30 02:21:38 vapier Exp $
 
 EAPI="prefix"
 
@@ -36,7 +36,7 @@ src_compile() {
 }
 
 src_install() {
-	make DESTDIR="${D}" install || die "make install failed"
+	emake DESTDIR="${D}" install || die "make install failed"
 	rm -r "${ED}"/usr/share/cracklib
 
 	# move shared libs to /
@@ -44,14 +44,16 @@ src_install() {
 	mv "${ED}"/usr/$(get_libdir)/*.so* "${ED}"/$(get_libdir)/ || die "could not move shared"
 	gen_usr_ldscript libcrack.so
 
-	echo -n "Generating cracklib dicts ... "
 	insinto /usr/share/dict
 	doins dicts/cracklib-small || die "word dict"
-	tc-is-cross-compiler \
-		|| export PATH=${ED}/usr/sbin:${PATH} LD_LIBRARY_PATH=${ED}/$(get_libdir)
-	cracklib-format dicts/cracklib-small \
-		| cracklib-packer "${ED}"/usr/$(get_libdir)/cracklib_dict \
-		|| die "couldnt create dict"
 
 	dodoc AUTHORS ChangeLog NEWS README*
+}
+
+pkg_postinst() {
+	if [[ ${EROOT} == "/" ]] ; then
+		ebegin "Regenerating cracklib dictionary"
+		create-cracklib-dict /usr/share/dict/* > /dev/null
+		eend $?
+	fi
 }
