@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/cracklib
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/cracklib/ChangeLog,v 1.104 2006/12/11 03:40:48 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/cracklib/ChangeLog,v 1.105 2006/12/30 02:21:38 vapier Exp $
+
+  30 Dec 2006; Mike Frysinger <vapier@gentoo.org> cracklib-2.8.9-r1.ebuild:
+  Regenerate the cracklib dictionary in pkg_postinst from all dict files
+  #114690 by Philippe Troin.
 
   11 Dec 2006; Mike Frysinger <vapier@gentoo.org> cracklib-2.8.9-r1.ebuild:
   Pull in python when USE=python #157787.
